--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
             <img
               class="what-we-do__img"
               src="images/images_mainpage/whatwedo/1img370x294.jpg"
+              srcset="images/images_mainpage/whatwedo/1img370x294@2x.jpg 2x"
               alt="monitor, keyboard and laptop"
               width="370"
               height="296"
@@ -251,6 +252,7 @@
             <img
               class="what-we-do__img"
               src="images/images_mainpage/whatwedo/2img370x294.jpg"
+              srcset="images/images_mainpage/whatwedo/2img370x294@2x.jpg 2x"
               alt="phone and laptop"
               width="370"
               height="294"
@@ -261,6 +263,7 @@
             <img
               class="what-we-do__img"
               src="images/images_mainpage/whatwedo/3img370x294.jpg"
+              srcset="images/images_mainpage/whatwedo/3img370x294@2x.jpg 2x"
               alt="color palette tablet"
               width="370"
               height="294"
@@ -281,6 +284,7 @@
             <img
               class="our-team__img"
               src="images/person1.jpg"
+              srcset="images/images_mainpage/whatwedo/1img370x294@2x.jpg 2x"
               alt="guy with glasses"
               width="270"
               height="260"
