--- a/index.html
+++ b/index.html
@@ -281,13 +281,23 @@
         <h2 class="second-header">Nasz zespół</h2>
         <ul class="our-team__list list">
           <li class="our-team__item">
+            <picture class="our-team__img">
+              <source srcset="
+            										images/images_mainpage/ourteam/1person270x260.jpg    1x,
+            										images/images_mainpage/ourteam/1person270x260@2x.jpg 2x
+            									" media="(min-width: 1200px)" />
+              <source srcset="
+            										images/images_mainpage/ourteam/1person354x374.jpg    1x,
+            										images/images_mainpage/ourteam/1person354x374@2x.jpg 2x
+            									" media="(min-width: 768px)" />
+              <source srcset="
+            										images/images_mainpage/ourteam/1person450x460.jpg    1x,
+            										images/images_mainpage/ourteam/1person450x460@2x.jpg 2x
+            									" media="(min-width: 480px)" />
             <img
               class="our-team__img"
-              src="images/person1.jpg"
-              srcset="images/images_mainpage/whatwedo/1img370x294@2x.jpg 2x"
-              alt="guy with glasses"
-              width="270"
-              height="260"
+              src="images/images_mainpage/ourteam/1person270x260.jpg"
+              alt="guy with glasses"              
             />
             <h3 class="our-team__employee">John Doe</h3>
             <p class="our-team__occupation">Product Designer</p>          
@@ -320,13 +330,24 @@
               </li>
               </ul>
               </li>
-             <li class="our-team__item">
+            <li class="our-team__item">
+              <picture class="our-team__img">
+                <source srcset="
+            										images/images_mainpage/ourteam/2person270x260.jpg    1x,
+            										images/images_mainpage/ourteam/2person270x260@2x.jpg 2x
+            									" media="(min-width: 1200px)" />
+                <source srcset="
+            										images/images_mainpage/ourteam/2person354x374.jpg    1x,
+            										images/images_mainpage/ourteam/2person354x374@2x.jpg 2x
+            									" media="(min-width: 768px)" />
+                <source srcset="
+            										images/images_mainpage/ourteam/2person450x460.jpg    1x,
+            										images/images_mainpage/ourteam/2person450x460@2x.jpg 2x
+            									" media="(min-width: 480px)" />
               <img
               class="our-team__img"
-              src="images/person2.jpg"
-              alt="woman in glasses"
-              width="270"
-              height="260"
+              src="images/images_mainpage/ourteam/2person270x260.jpg"
+              alt="woman in glasses"              
             />
             
                  
