--- a/index.html
+++ b/index.html
@@ -386,12 +386,23 @@
           </ul>
         </li>
           <li class="our-team__item">
+            <picture class="our-team__img">
+              <source srcset="
+          										images/images_mainpage/ourteam/3person270x260.jpg    1x,
+          										images/images_mainpage/ourteam/3person270x260@2x.jpg 2x
+          									" media="(min-width: 1200px)" />
+              <source srcset="
+          										images/images_mainpage/ourteam/3person354x374.jpg    1x,
+          										images/images_mainpage/ourteam/3person354x374@2x.jpg 2x
+          									" media="(min-width: 768px)" />
+              <source srcset="
+          										images/images_mainpage/ourteam/3person450x460.jpg    1x,
+          										images/images_mainpage/ourteam/3person450x460@2x.jpg 2x
+          									" media="(min-width: 480px)" />
             <img
               class="our-team__img"
-              src="images/person3.jpg"
-              alt="guy without glasses"
-              width="270"
-              height="260"
+              src="images/images_mainpage/ourteam/3person270x260.jpg"
+              alt="guy without glasses"              
             />
 
             <h3 class="our-team__employee">John Doe</h3>
@@ -428,12 +439,23 @@
           </ul>
         </li>
           <li class="our-team__item">
+            <picture class="our-team__img">
+              <source srcset="
+          										images/images_mainpage/ourteam/4person270x260.jpg    1x,
+          										images/images_mainpage/ourteam/4person270x260@2x.jpg 2x
+          									" media="(min-width: 1200px)" />
+              <source srcset="
+          										images/images_mainpage/ourteam/4person354x374.jpg    1x,
+          										images/images_mainpage/ourteam/4person354x374@2x.jpg 2x
+          									" media="(min-width: 768px)" />
+              <source srcset="
+          										images/images_mainpage/ourteam/4person450x460.jpg    1x,
+          										images/images_mainpage/ourteam/4person450x460@2x.jpg 2x
+          									" media="(min-width: 480px)" />
             <img
               class="our-team__img"
-              src="images/person4.jpg"
+              src="images/images_mainpage/ourteam/4person270x260.jpg"
               alt="guy with glasses"
-              width="270"
-              height="260"
             />
             <h3 class="our-team__employee">John Doe</h3>
             <p class="our-team__occupation">UI Designer</p>
@@ -522,8 +544,8 @@
 
     <!-- Footer -->
       <footer class="footer">
-      <div class="container">
-      <div class="address-wrapper">
+      <div class="container section">
+      <div class="address__wrapper">
       <a class="logo" href="index.html"
         >Web<span class="logo__accent--light-theme">Studio</span></a
       >
