--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
             alt="Seafood leaflet"
             />
             </picture>
-            
+
             <div class="projects__text-popup">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do
@@ -237,12 +237,25 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/4img370x294.jpg    1x,
+            											images/images_portfolio/4img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/4img354x294.jpg    1x,
+            											images/images_portfolio/4img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/4img450x294.jpg    1x,
+            											images/images_portfolio/4img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img 
             class="projects__img" 
-            src="images/headphones.jpg" 
-            alt="speakers for the mentor" 
-            width="370"
-            height="294" />
+            src="images/images_portfolio/4img320x240.jpg" 
+            alt="speakers for the mentor"
+            />
+            </picture>
 
             <div class="projects__text-popup">
               <p>
