--- a/portfolio.html
+++ b/portfolio.html
@@ -273,11 +273,25 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/5img370x294.jpg    1x,
+            											images/images_portfolio/5img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/5img354x294.jpg    1x,
+            											images/images_portfolio/5img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/5img450x294.jpg    1x,
+            											images/images_portfolio/5img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img 
             class="projects__img" 
-            src="images/twoboxes.jpg" 
-            alt="two cubes" width="370" 
-            height="294" />
+            src="images/images_portfolio/5img320x240.jpg" 
+            alt="two cubes" 
+            />
+            </picture>
 
             <div class="projects__text-popup">
               <p>
@@ -295,12 +309,26 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/6img370x294.jpg    1x,
+            											images/images_portfolio/6img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/6img354x294.jpg    1x,
+            											images/images_portfolio/6img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/6img450x294.jpg    1x,
+            											images/images_portfolio/6img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img 
             class="projects__img" 
-            src="images/darkscreen.jpg" 
+            src="images/images_portfolio/6img320x240.jpg" 
             alt="monitor with dark screen" 
-            width="370"
-            height="294" />
+            />
+            </picture>
+
             <div class="projects__text-popup">
 
               <p>
@@ -318,6 +346,7 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            
             <img 
             class="projects__img" 
             src="images/magazine.jpg" 
