--- a/portfolio.html
+++ b/portfolio.html
@@ -346,13 +346,26 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
-            
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/7img370x294.jpg    1x,
+            											images/images_portfolio/7img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/7img354x294.jpg    1x,
+            											images/images_portfolio/7img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/7img450x294.jpg    1x,
+            											images/images_portfolio/7img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img 
             class="projects__img" 
-            src="images/magazine.jpg" 
-            alt="Limited magazine" 
-            width="370" 
-            height="294" />
+            src="images/images_portfolio/7img320x240.jpg" 
+            alt="Limited magazine"
+            />
+            </picture>
+
 
             <div class="projects__text-popup">
               <p>
@@ -370,11 +383,25 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/8img370x294.jpg    1x,
+            											images/images_portfolio/8img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/8img354x294.jpg    1x,
+            											images/images_portfolio/8img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/8img450x294.jpg    1x,
+            											images/images_portfolio/8img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img class="projects__img" 
-            src="images/whitelabel.jpg" 
+            src="images/images_portfolio/8img320x240.jpg" 
             alt="white label with label" 
-            width="370"
-            height="294" />
+            />
+            </picture>
+            
             <div class="projects__text-popup">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do
