--- a/portfolio.html
+++ b/portfolio.html
@@ -401,7 +401,7 @@
             alt="white label with label" 
             />
             </picture>
-            
+
             <div class="projects__text-popup">
               <p>
                 Technocrack jest popularną platformą wykorzystywaną do
@@ -418,12 +418,25 @@
         </li>
         <li class="projects__item">
           <div class="projects__wrapper">
+            <picture class="projects__img">
+              <source srcset="
+            											images/images_portfolio/9img370x294.jpg    1x,
+            											images/images_portfolio/9img370x294@2x.jpg 2x
+            										" media="(min-width: 1200px)" />
+              <source srcset="
+            											images/images_portfolio/9img354x294.jpg    1x,
+            											images/images_portfolio/9img354x294@2x.jpg 2x
+            										" media="(min-width: 768px)" />
+              <source srcset="
+            											images/images_portfolio/9img450x294.jpg    1x,
+            											images/images_portfolio/9img450x294@2x.jpg 2x
+            										" media="(min-width: 480px)" />
             <img 
             class="projects__img" 
-            src="images/writingonthelaptop.jpg" 
+            src="images/images_portfolio/9img320x240.jpg" 
             alt="writing on the laptop" 
-            width="370"
-              height="294" />
+            />
+            </picture>
 
             <div class="projects__text-popup">
               <p>
