--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css"    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-            rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      as="style"
-    />
-    <!-- poprzedni href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" -->
+    
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="css/main.min.css" />
     <title>Document</title>
 
@@ -23,7 +21,7 @@
   <header class="header">
     <div class="container">   
     <a class="logo" href="index.html"
-					>Web<span class="logo__accent--dark-theme">Studio</span></a
+				>Web<span class="logo__accent--dark-theme">Studio</span></a
 				>
 
     <nav class="navigation">
@@ -430,7 +428,7 @@
               </a>
             </li>
             <li class="socials-list__item">
-              <a href="#" class="socials-link">
+              <a href="#" class="socials-list__link">
                 <svg class="socials-list__icon">
                   <use href="images/icons.svg#linkedin"></use>
                 </svg>
@@ -576,7 +574,7 @@
       <p class="join-us">DOŁĄCZ DO NAS</p>
       <ul class="socials-list list">
         <li class="socials-list__item social-padding">
-          <a href="#" class="ocials-list__link join-us--grey-link-theme">
+          <a href="#" class="socials-list__link join-us--grey-link-theme">
             <svg class="socials-list__icon join-us--white-icon-theme">
               <use href="images/icons.svg#instagram"></use>
             </svg>
@@ -603,7 +601,7 @@
       </ul>
     </div>
     <div class="sign-up__wrapper">
-    <p class="sign-up">Zapisz się do newslettera</p>
+    <p class="sing-up">Zapisz się do newslettera</p>
     <form 
         action="#" 
         class="sign-up__form" 
