--- a/index.html
+++ b/index.html
@@ -124,12 +124,23 @@
               </svg>
             </button>
             <h2 class="modal__header">Zostaw swoje dane w formularzu poniżej</h2>
-            <form action="#" name="contact_form" autocomplete="on" class="modal_form">
-              <label for="modal-form-input-username" class="modal__label">Imie
+            <form 
+              action="#" 
+              name="contact_form" 
+              autocomplete="on" 
+              class="modal__form">
+              <label 
+                for="modal-form-input-username" 
+                class="modal__label">Imie
               </label>
             
               <div class="modal__input--position">
-                <input type="text" name="username" class="modal__form-input" id="modal-form-input-username" required />
+                <input 
+                  type="text" 
+                  ame="username" 
+                  class="modal__input" 
+                  id="modal-form-input-username" 
+                  required />
                 <svg class="modal__icon">
                   <use href="images/icons.svg#person-black"></use>
                 </svg>
@@ -143,28 +154,46 @@
                 <input 
                 type="tel" 
                 name="userphone" 
-                class="modal-form-input" 
+                class="modal__input" 
                 id="modal-form-input-phonenumber" 
                 required />
                 <svg class="modal__icon">
                   <use href="images/icons.svg#phone-black"></use>
                 </svg>
               </div>
-              <label for="modal-form-input-useremail" class="modal__label">Email</label>
+              <label 
+                for="modal-form-input-useremail" 
+                class="modal__label">Email</label>
               <div class="modal__input--position">
-                <input type="email" name="useremail" class="modal__input" id="modal-form-input-useremail" required />
+                <input 
+                  type="email" 
+                  name="useremail" 
+                  class="modal__input" 
+                  id="modal-form-input-useremail" 
+                  required />
                 <svg class="modal__icon">
                   <use href="images/icons.svg#email-black"></use>
                 </svg>
               </div>
-              <label for="modal-form-textarea" class="modal__label">Komentarz</label>
-              <textarea name="userfeedback" id="modal-form-textarea" class="modal-form-textarea-feedback"
+              <label 
+                for="modal-form-textarea" 
+                class="modal__label">Komentarz</label>
+              <textarea 
+                name="userfeedback" 
+                id="modal-form-textarea" 
+                class="modal__textarea"
                 placeholder="Wprowadź tekst"></textarea>
               <div class="modal__checkbox--position">
-                <input type="checkbox" name="accept-terms" id="modal-form-checkbox"
-                  class="modal__checkbox visually-hidden" required />
+                <input 
+                  type="checkbox" 
+                  name="accept-terms" 
+                  id="modal-form-checkbox"
+                  class="modal__checkbox visually-hidden" 
+                  required />
             
-                <label for="modal-form-checkbox" class="modal__terms">Oświadczam iż akceptuję
+                <label 
+                  for="modal-form-checkbox" 
+                  class="modal__terms">Oświadczam iż akceptuję
                   <a href="#" class="modal__links"> Regulamin</a> i
                   <a href="#" class="modal__links">Politykę Prywatności.</a>
                 </label>
@@ -181,7 +210,7 @@
   <h2 hidden>Nasze atuty</h2>
   <ul class="atributes__list list">
     <li class="atributes__item">
-      <div class="atributes-icon-wrapper">
+      <div class="atributes__icon-wrapper">
         <svg class="atributes__icon">
           <use href="images/icons.svg#antenna"></use>
         </svg>
@@ -192,7 +221,7 @@
             </p>
           </li>
           <li class="atributes__item">
-            <div class="atributes-icon-wrapper">
+            <div class="atributes__icon-wrapper">
               <svg class="atributes__icon">
                 <use href="images/icons.svg#clock"></use>
               </svg>
@@ -202,7 +231,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
             <li class="atributes__item">
-              <div class="atributes-icon-wrapper">
+              <div class="atributes__icon-wrapper">
                 <svg class="atributes__icon">
                   <use href="images/icons.svg#diagram"></use>
                 </svg>
@@ -213,7 +242,7 @@
             </p>
           </li>
           <li class="atributes__item">
-            <div class="atributes-icon-wrapper">
+            <div class="atributes__icon-wrapper">
               <svg class="atributes__icon">
                 <use href="images/icons.svg#astronaut"></use>
               </svg>
