--- a/portfolio.html
+++ b/portfolio.html
@@ -513,7 +513,7 @@
       <form action="#" class="sign-up__form" name="signup_form" autocomplete="on">
         <input class="sign-up__input" type="email" name="email" placeholder="E-mail" required />
 
-        <button class="primary-btn sign-up__btn" type="submit">
+        <button class="primary-btn sign-up__btn primary-btn_footer" type="submit">
           Zapisz się
           <svg class="sign-up__icon">
             <use href="images/icons.svg#icon-send"></use>
