--- a/portfolio.html
+++ b/portfolio.html
@@ -108,19 +108,19 @@
       <div class="container">
       <ul class="filters__list list">
         <li class="filters__item">
-          <button class="filter__btn" type="button">Wszystkie</button>
+          <button class="filters__btn" type="button">Wszystkie</button>
         </li>
         <li class="filters__item">
-          <button class="filter__btn" type="button">Strony</button>
+          <button class="filters__btn" type="button">Strony</button>
         </li>
         <li class="filters__item">
-          <button class="filter__btn" type="button">Aplikacje</button>
+          <button class="filters__btn" type="button">Aplikacje</button>
         </li>
         <li class="filters__item">
-          <button class="filter__btn" type="button">Dizajn</button>
+          <button class="filters__btn" type="button">Dizajn</button>
         </li>
         <li class="filters__item">
-          <button class="filter__btn" type="button">Marketing</button>
+          <button class="filters__btn" type="button">Marketing</button>
         </li>
       </ul>
 
