--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <!-- Sekcja HERO-->
       <section class="hero">
-     <div class="hero__container">
+     <div class="container">
         <h1 class="hero__header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button class="primary-btn" type="button" data-modal-open>Zamów usługe</button>
       </div>
