--- a/index.html
+++ b/index.html
@@ -656,6 +656,7 @@
     </div>
     </footer>
 
+    <script src="js/mobile-menu.js"></script>
     <script src="js/modal.js"></script>
 
     </body>
