--- a/portfolio.html
+++ b/portfolio.html
@@ -460,9 +460,9 @@
 
   <!-- STOPKA -->
 <footer class="footer">
-  <div class="container">
-    <div class="address-wrapper">
-      <a class="logo" href="index.html">Web<span class="logo__accent--light-theme">Studio</span></a>
+  <div class="container section">
+    <div class="address__wrapper">
+      <a class="logo logo--footer" href="index.html">Web<span class="logo__accent--light-theme">Studio</span></a>
       <address class="address">
         <ul class="address-list list">
           <li class="address-list__item">
