--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
       </ul>
     </nav>
-    
+    <div class="contact">
       <a class="email" href="mailto:info@devstudio.com">
       <svg class="email__icon">
         <use href="images/icons.svg#envelope"></use>
