--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,10 @@
       </div>
       
       <div mobile-menu class="menu-mobile backdrop is-hidden">
-        <button type="button" class="close-btn menu-mobile__close-btn" mobile-menu-close>
+        <button 
+          type="button" 
+          class="close-btn menu-mobile__close-btn" 
+          mobile-menu-close>
           <svg class="close-btn__icon">
             <use href="images/icons.svg#close-icon"></use>
           </svg>
